ajax kaminari con sorting, gonna divide invoices and estimates next

--- a/app/assets/stylesheets/sherman.css.scss
+++ b/app/assets/stylesheets/sherman.css.scss
@@ -164,4 +164,17 @@ font-weight: 100;
   padding-right: 5%!important;
 }
 
+.see-all-invoice{
+  float: right;
+  display: inline;
+}
+.see-all-invoice-link{
+  font-size: 65%;
+}
 
+.hide{
+  display: none;
+}
+.back-all{
+  float: right;
+}
