--- a/app/views/billing_docs/_invoice_table.html.haml
+++ b/app/views/billing_docs/_invoice_table.html.haml
@@ -1,5 +1,5 @@
 -@invoices.each do |invoice|
-  %tr.line-item-show-row#invoices-row
+  %tr.line-item-show-row#invoices-row{data: {id: invoice.id}}
     %td= invoice.due_date
     %td= link_to invoice.title, billing_doc_path(invoice)
     %td= invoice.note
@@ -8,3 +8,4 @@
         = link_to(contact.name, contact_path(contact))
     %td= invoice.total
     %td= invoice.state
+/ =link_to 'back', '#', class: "back-all hide", data: {appended: @billing_ids}
