--- a/app/assets/stylesheets/sherman.css.scss
+++ b/app/assets/stylesheets/sherman.css.scss
@@ -109,7 +109,7 @@ table {
   font-weight: bold;
 }
 
-.show-mailer-button{
+.show-mailer-button, .make-invoice{
 float: right;
 display: inline-block;
 position: relative;
