--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -12,9 +12,9 @@
         = link_to "+ Sherman Collabo", "#"
       - if user_signed_in?
         %li
-          =link_to 'Invoices', billing_docs_path
+          =link_to 'Invoices', invoices_path
         %li
-          =link_to 'Estimates', billing_docs_path
+          =link_to 'Estimates', estimates_path
         %li.dropdown
           %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
             ="#{current_user.email}"
