added landing page, styling to invoices estimates, edit page for contacts

--- a/app/assets/javascripts/sherman.js.coffee.erb
+++ b/app/assets/javascripts/sherman.js.coffee.erb
@@ -1,4 +1,10 @@
 $ ->
+
+
+  $('.landing-one').hide().fadeIn(2000)
+  $('.landing-invoice').hide().fadeIn(3500)
+  $('#flash_notice').fadeOut(4000)
+
   $('body').on 'keyup ', ".quantity-field, .price-field", (e) ->
     e.preventDefault()
     console.log('hi')
