--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,13 @@
-#landing-begin
+/ #landing-begin
+/   .landing-one
+/     %h1 Sherman lets you expedite your finances <em>digitally</em>
+/   .landing-invoice
+/     %h1 As you create and manage your <strong style="color:#AFB09C">invoices</strong> and <strong style="color:#AFB09C">estimates</strong>
+/   .landing
+/     %h1 So you get that paper in order SON
+.sherman-landing
+  = image_tag "sherman.jpg", class: 'sherman-pic'
   .landing-one
     %h1 Sherman lets you expedite your finances <em>digitally</em>
   .landing-invoice
-    %h1 As you create and manage your <strong style="color:#AFB09C">invoices</strong> and <strong style="color:#AFB09C">estimates</strong>
-  .landing
-    %h1 So you get that paper in order SON
+    %h1 As you create and manage your <strong style="color:#7CF4BB">invoices</strong> and <strong style="color:#7CF4BB">estimates</strong>
