--- a/app/views/invoices/index.html.haml
+++ b/app/views/invoices/index.html.haml
@@ -1,12 +1,12 @@
 #invoices-paginate
   = paginate @invoices, :remote => true
 .row
-  .col-md-7.col-md-offset-2
+  .col-md-10.col-md-offset-1
     .call-to-action-invoice-estimate
-      = link_to 'Create Invoice', new_invoice_path(kind:  'invoice'), class: 'btn-success btn'
+      = link_to 'Create Invoice', new_invoice_path(kind:  'invoice'), class: 'btn-success btn btn-lg'
       %br
     .invoices
-      %h3
+      %h2
         #invoices-title
           Invoices
       %table#invoices-index-table.table-striped.table-hover
@@ -15,7 +15,7 @@
           %th Title
           %th Note
           %th= link_to " Contact(s)", "#", class: 'contact-sort forward', data: {type: 'contacts', category: 'invoices'}
-          %th= link_to 'Total', '#', class: 'total-sort forward', data: {type: 'total', category: 'invoices'}
+          %th= link_to 'Total ($)', '#', class: 'total-sort forward', data: {type: 'total', category: 'invoices'}
           %th= link_to 'Status', '#', class: 'status-sort forward', data: {type: 'state', category: 'invoices'}
         %tbody#invoice-table-entries
           = render @invoices
