--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,4 +10,4 @@
   .landing-one
     %h1 Sherman lets you expedite your finances <em>digitally</em>
   .landing-invoice
-    %h1 As you create and manage your <strong style="color:#7CF4BB">invoices</strong> and <strong style="color:#7CF4BB">estimates</strong>
+    %h1 As you create and manage your <strong style="color:#F08C89">invoices</strong> and <strong style="color:#F08C89">estimates</strong>
