--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -1,29 +1,20 @@
-.add-contact-button
-  = link_to "Add Contact", new_contact_path, title: 'Add Contact', data: {gmodal: true}, class: 'btn btn-warning'
-%br
-.scrollbar
-  .handle
-    .mousearea
-#frame.frame
-  %ul.slidee
-    %li
-      1
-    %li
-      2
-    %li
-      3
-%br
-#contact
-  %table#contact-table.table-striped.table-hover
-    %tr
-      %th{colspan: "2"} name
-      %th{colspan: "2"} company
-      %th{colspan: "2"} email
-      %th{colspan: "2"} phone-number
-    %tbody
-      -@contacts.each do |contact|
-        %tr.space_under
-          %td{colspan: "2"}= link_to(contact.name, contact_path(contact))
-          %td{colspan: "2"}= contact.company.try(:name)
-          %td{colspan: "2"}= contact.email
-          %td{colspan: "2"}= contact.phone_number
+.row
+  .col-md-10.col-md-offset-1
+    .add-contact-button
+      = link_to "Add Contact", new_contact_path, title: 'Add Contact', data: {gmodal: true}, class: 'btn btn-success btn-lg'
+    #contact
+      %h2#contact-header
+        Top Contacts
+      = render partial: 'top_contacts'
+      %h2#contact-header
+        All Contacts
+      %table#contact-table.table-striped.table-hover
+        %thead
+          %th{colspan: "2"} name
+          %th{colspan: "2"}= link_to " Company", "#", class: 'company-sort forward', data: {type: 'company', category: 'contacts'}
+          %th{colspan: "2"} email
+          %th{colspan: "2"} phone-number
+        %tbody#contacts-table-entries
+          = render @contacts
+      #contacts-paginate
+        = paginate @contacts, :remote => true
