--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,4 +1,5 @@
 .row
+  #flash-validation-contact
   .col-md-6.col-md-offset-3
     #create.form-group
       = form_for @contact, :html => { :multipart => true }, :remote => true do |f|
